--- a/IfFastInjector/TODO.txt
+++ b/IfFastInjector/TODO.txt
@@ -1,17 +1,16 @@
 
 *** Add unit tests to ensure that cached closure factories are handled correctly
 
-
 - Need to add logic to handle IDisposable properly
 
 - Run MS code analysis and deal with warnings
 
-- Find missing Millis in performance
-	- Theory: overhead of extra objects???
+- DONE: Closed performance differences with peers in Injector2:
 	
-	No              177             185             196             227
-	fFastInjector   193             213             257             351
-	HaveBox         236             260             265             358
-	IfFastInjector  215             237             322             558
+Name            Singleton       Transient       Combined        Complex
+No              180             194             208             239
+fFastInjector   203             237             274             372
+HaveBox         216             246             249             352
+IfFastInjector  230             253             283             350
 
-- Eliminate code path differences between constructor type injection and field type injection
+- Resolve remaining TODOs in code and deprecate injectorInternal_Legacy.
