Fix edge case with property injection; add support for N-argument factory methods.

--- a/IfFastInjector/TODO.txt
+++ b/IfFastInjector/TODO.txt
@@ -1,7 +1,9 @@
 
 - Need for IDisposable???
 
-- FEATURE: Logic to handle lambda
+- Check on IfInject of private Constructors
+
+- Error + test for InitConstructor
 
 - DONE: Closed performance differences: 
 	http://www.palmmedia.de/blog/2011/8/30/ioc-container-benchmark-performance-comparison
