--- a/IfInjector/TODO.txt
+++ b/IfInjector/TODO.txt
@@ -3,14 +3,15 @@
 	- Need for IDisposable???
 
 - DEFECT:
-	- Property injection broken for factories
-
 	- EDGE Cases:
 		- How should singleton or (when we have them) custom lifecycles be handled?
 		- If modification of a dependent type occurs, should we clear the resolver or throw an exception...
 			- This probably requires a config setting for the behavior
 		- If an assembly creates new types, how should this be handled for implicit types???
 			- Think have correct behavior: TODO: test case
+
+- Refactor
+	- Split Injector from Resolver into seperatate files; use namespace for internals rather than static class ??
 		
 - MISSING FEATURES:
 	- InjectStatic()
@@ -21,8 +22,6 @@
 	- Clean up unit tests
 	- White box testing of resolver loop checking??
 	- Ensure clear of implicit resolver if set explicit
-
-	- Need to ensure tests also run on factories
 
 - WISH LIST:
 	- Generics
