--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,12 @@
 ----------------
+Version 0.6.1/0.6.2
+----------------
+
+I was happy to see things working so soothly - then I published + tested my 0.6.1 nuget package.  It turns out, for whatever reason, nuget was packing my debug .dll rather than my release .dll.  At least the mystery is solved.
+
+There are some minor (but inconseqential) of a few lines of code I did while tracking this down...
+
+----------------
 Version 0.6
 ----------------
 
